load("@rules_cc//cc:defs.bzl", "cc_library")

load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "string_flag")

load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl", COPTS = "BASE_COPTS", "PROFILE")

# for mkhdr findlib.h
exports_files(["findlib_map_reduce.c"])

cc_library(
    name = "findlib_map_reduce",
    srcs = [
        "findlib_map_reduce.c",
        ":mkhdrs"
    ],
    includes = ["."],
    deps = [ # BASE_DEPS + [
        "@liblogc//lib:logc",
        "@uthash//lib:uthash",
    ],
    copts = COPTS + ["-I$(GENDIR)"],
    defines = PROFILE + select({
        ## for dirent->d_type macros:
        "@platforms//os:linux": ["_DEFAULT_SOURCE"],
        "//conditions:default": []
    }),
    visibility = ["//visibility:public"]
)

makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "findlib_map_reduce.c",
    ],
    additional_srcs = [
        "@liblogc//macros:ansi_colors.h",
    ] + select({
        "@obazl_tools_cc//profile:dev?": [
            "@liblogc//macros:logging_debug.h"
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h"
        ]
    }),
)
